# sqlfluff-ktuft

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/sqlfluff_ktuft/: __init__.py  profile_cli.py  rules.py
