[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlfluff-ktuft"
version = "0.1.0"
description = "Personal SQLFluff rules for KTuft SQL layout preferences."
requires-python = ">=3.10"
dependencies = ["sqlfluff>=3.5,<4"]

[project.urls]
Repository = "https://github.com/tuftkyle/sqlfluff-ktuft"

[project.entry-points.sqlfluff]
ktuft = "sqlfluff_ktuft"
