[metadata]
name = sqlfluff-ktuft
version = 0.1.1
description = Personal SQLFluff rules for KTuft SQL layout preferences.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    sqlfluff>=3.5,<4

[options.packages.find]
where = src

[options.entry_points]
sqlfluff =
    ktuft = sqlfluff_ktuft
console_scripts =
    sqlfluff-ktuft = sqlfluff_ktuft.profile_cli:ktuft_main
    sqlfluff-profile = sqlfluff_ktuft.profile_cli:main
